# it-automation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: classification_rules.yaml  guardrail_rules.yaml
docs/superpowers/plans/: 2026-04-11-plan1-core-foundation.md
docs/superpowers/specs/: 2026-04-11-it-automation-design.md
src/: config.py
src/auth/: dependencies.py  models.py  password.py  routes.py  tokens.py
src/db/: connection.py
src/db/migrations/: 001_initial.sql  002_guardrail_audit.sql  003_create_users.sql
src/guardrail/: _patterns.py  app.py  approval_gate.py  audit.py  audit_orm.py  audit_read_routes.py  circuit_breaker.py  dry_run.py  models.py  pipeline.py  reversibility.py  risk_classifier.py  routes.py
src/models/: task.py
src/queue/: redis_queues.py
src/router/: app.py  classifier.py  payload_scanner.py  routes.py  rules.py
src/shared/: logging.py
tests/integration/: test_audit_persistence.py  test_auth_api.py  test_guardrail_api.py  test_router_api.py
tests/unit/: test_approval_gate.py  test_audit_hash_chain.py  test_audit_orm.py  test_audit_read_routes.py  test_auth_dependencies.py  test_auth_password.py  test_auth_tokens.py  test_circuit_breaker.py  test_classifier.py  test_config.py  test_db_connection.py  test_dry_run.py  test_guardrail_models.py  test_guardrail_routes_unit.py  test_payload_scanner.py  test_pipeline.py  test_redis_queues.py  test_reversibility.py  test_risk_classifier.py  test_routes_unit.py  test_rules.py  test_task_models.py
