[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "it-automation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "redis>=5.0.3",
    "rq>=1.16.2",
    "spacy>=3.7.4",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
